--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit.</p>
+    <h1 style="color: palevioletred;">Hello World</h1>
+    <p style="color: pink;">Lorem ipsum dolor sit.</p>
 </body>
 </html>
