--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
     <h1 style="color: palevioletred;">Hello World</h1>
     <p style="color: pink;">Lorem ipsum dolor sit.</p>
 </body>
+
 </html>
