--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         }
 
         p {
-            text-align: center;
+            font-size: 50px;
+            font-weight: 600;
         }
     </style>
 </head>
